Update GitHub token reference in frogbot workflow

--- a/.github/workflows/frogbot-pr-scan.yml
+++ b/.github/workflows/frogbot-pr-scan.yml
@@ -20,4 +20,4 @@ jobs:
         env:
           JF_URL: ${{ secrets.FROGBOT_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.FROGBOT_ACCESS_TOKEN }}
-          JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JF_GIT_TOKEN: ${{ secrets.GH_TOKEN }}
