--- a/.github/workflows/frogbot-repo-scan.yml
+++ b/.github/workflows/frogbot-repo-scan.yml
@@ -25,5 +25,5 @@ jobs:
         env:
           JF_URL: ${{ secrets.FROGBOT_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.FROGBOT_ACCESS_TOKEN }}
-          JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JF_GIT_TOKEN: ${{ secrets.GH_TOKEN }}
           JF_GIT_BASE_BRANCH: ${{ env.BASE_BRANCH }}
