--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+git {
   "name": "github-scan-without-uploading-artifacts",
   "version": "1.0.0",
   "private": true,
@@ -14,7 +14,13 @@
   "dependencies": {
     "axios": "0.21.0",
     "express": "4.17.1",
+    "handlebars": "4.0.11",
+    "js-yaml": "3.13.1",
     "lodash": "4.17.20",
-    "minimist": "0.0.8"
+    "minimist": "0.0.8",
+    "node-forge": "0.9.0",
+    "serialize-javascript": "2.1.1",
+    "tar": "4.4.1",
+    "xmldom": "0.1.27"
   }
 }
